--- a/Octodrome/Octodrome/App.razor
+++ b/Octodrome/Octodrome/App.razor
@@ -1,13 +1,19 @@
 ﻿
-<CascadingAuthenticationState>
-    <Router AppAssembly="@typeof(Program).Assembly">
-        <Found Context="routeData">
-            <AuthorizeRouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" />
-        </Found>
-        <NotFound>
-            <LayoutView Layout="@typeof(MainLayout)">
-                <p>Sorry, there's nothing at this address.</p>
-            </LayoutView>
-        </NotFound>
-    </Router>
-</CascadingAuthenticationState>
+@using BlazorFluentUI
+<BFUTheme>
+    <BFUStylePreloader LoadAllComponents="true" />
+    <BFULayerHost Style="display:flex; flex-direction: row;width:100vw;height:100vh;overflow:hidden;">
+        <CascadingAuthenticationState>
+            <Router AppAssembly="typeof(MainLayout).Assembly">
+                <Found Context="routeData">
+                    <BFUResponsiveCascader>
+                        <RouteView RouteData="routeData" DefaultLayout="@typeof(MainLayout)" />
+                    </BFUResponsiveCascader>
+                </Found>
+                <NotFound>
+                    <p>Page not found.</p>
+                </NotFound>
+            </Router>
+        </CascadingAuthenticationState>
+    </BFULayerHost>
+</BFUTheme>
