--- a/Octodrome/Octodrome/_Imports.razor
+++ b/Octodrome/Octodrome/_Imports.razor
@@ -6,4 +6,5 @@
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.JSInterop
 @using Octodrome
+@using Octodrome.Components
 @using Octodrome.Shared
